A fix for tooltips, popovers flickering in BS2 J3

--- a/site/assets/css/flexicontent.css
+++ b/site/assets/css/flexicontent.css
@@ -2379,6 +2379,10 @@ body .ui-widget a.btn.btn-success,
 body .ui-widget a.btn.btn-info {
 	color: white;
 }
+.popover,
+.tooltip {
+	pointer-events: none;
+}
 body .fc_loading_box {
 	border: gray;
 	box-shadow: inset 0px 0px 5px #777;
