--- a/site/assets/less/flexi_shared.less
+++ b/site/assets/less/flexi_shared.less
@@ -50,6 +50,12 @@ body .ui-widget button { font-size: small; }
 body .ui-widget a.btn.btn-success, body .ui-widget a.btn.btn-info { color: white; }
 
 
+/***************
+ * tooltip fixes
+ ***************/
+.popover,.tooltip { pointer-events: none; }
+
+
 /**********************
  * yet unclassified CSS
  **********************/
